--- a/React Facts/index.html
+++ b/React Facts/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css" />
     <title>React Facts</title>
-    
-</head>
-<body>
+  </head>
+  <body>
+    <div class="container"></div>
+     <div className='header'></div>
     <div id="root"></div>
-    <script type="module" src="index.jsx"></script>
-</body>
+    <script type="module" src="/index.jsx"></script>
+  </body>
 </html>
